2009-06-28  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-beg-of-statement)
	(verilog-endcomment-reason-re): Support unique case and priority
	case.
	(verilog-basic-complete-re): Support localparam lineup.
	(verilog-beg-of-statement-1): Fix for robustness, unique case.
	(verilog-set-auto-endcomments): Fix for unique case, always_comb
	commenting.
	(verilog-leap-to-case-head): Now support *nested* unique &
	priority case statements.
	(verilog-auto-lineup): Make just declarations the default (as it
	had been).
	(verilog-leap-to-case-head): Support priority/unique case
	statements.
	(verilog-auto-lineup): Rework to give users radio buttons to
	select the various styles of automatic lineup
	(verilog-error-regexp-alist): Rework to support the XEmacs style
	of error regular expressions from compilers, lint tools &
	simulators.  Note that GNU Emacs has made it impossible for a mode
	to load such things.
	(electric-verilog-terminate-line, verilog-indent-declaration)
	(verilog-auto-wiure): Rework for radio button selection of
	auto-lineup selection of specification of auto lineup.
	(verilog-beg-of-statement-1): Redesign to support proper operation
	in additional code, based on testing with auto-lineup.
	(verilog-calculate-indent, assignments & declarations)
	(verilog-backward-token): Enhance to support auto-lineup of
	assignments & declarations.
	(verilog-in-directive-p, verilog-at-struct-p): New function for
	easy test of whether we are.
	(verilog-pretty-declarations, verilog-pretty-expr): Massive rework
	to support safe execution at almost anyline.
	(verilog-calc-1): Properly support indenting deep inside generate
	blocks.
	(verilog-init-font) Remove definition & use of verilog-init-font,
	as it is redundant with font-lock-defaults.
	(verilog-mode): Alter the definition of verilog-font-lock-defualts
	to avoid circular calls if syntax-ppss is a function (as is the
	case now in 22.x GNU Emacs) as that function would sometimes call