@@ -1,3 +1,8 @@
+2009-06-29  Chong Yidong  <cyd@stupidchicken.com>
+
+	* server.el (server-buffer-done): Prevent kill-buffer from
+	prompting by clearing the buffer modification flag (Bug#3696).
+
 2009-06-28  Michael McNamara  <mac@mail.brushroad.com>
 
 	* verilog-mode.el (verilog-beg-of-statement)
